# saddle-animation-vertex-animation-texture

./: Cargo.toml  README.md  __data.json  index.html
.github/workflows/: ci.yaml
_app/: version.json
_app/immutable/chunks/: BUMy6Ane.js  BbR_TR3S.js  Be7EYB7h.js  C9-aUA_O.js  DGZ-VjKz.js
_app/immutable/entry/: app.laZJv4X_.js  start.BQAQ9ZE8.js
_app/immutable/nodes/: 0.B5AzXQWS.js  1.BK3Zck-Z.js  2.DqoZ3G3Y.js  3.Cm3VYTBM.js  4.BogtkDjV.js
assets/demo/: openvat_like.vat.json  wave.vatanim.json
assets/shaders/: vat.wgsl  vat_prepass.wgsl
demo/basic/: index.html
demo/crowd/: index.html
demo/debug_lab/: index.html
demo/lab/: index.html
demo/modular_sync/: index.html
demo/multi_clip/: index.html
demos/basic/: index.html
demos/crowd/: index.html
demos/debug_lab/: index.html
demos/lab/: index.html
demos/modular_sync/: index.html
demos/multi_clip/: index.html
docs/: architecture.md  asset-format.md  configuration.md
docs/architecture/: __data.json  index.html
docs/asset-format/: __data.json  index.html
docs/configuration/: __data.json  index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/crowd/: Cargo.toml
examples/crowd/src/: main.rs
examples/debug_lab/: Cargo.toml
examples/debug_lab/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs
examples/modular_sync/: Cargo.toml
examples/modular_sync/src/: main.rs
examples/multi_clip/: Cargo.toml
examples/multi_clip/src/: main.rs
examples/support/: Cargo.toml
examples/support/src/: lib.rs
src/: asset.rs  asset_loader.rs  asset_loader_tests.rs  components.rs  integration_tests.rs  lib.rs  material.rs  messages.rs  systems.rs  systems_tests.rs  validation.rs
