[package]
name = "saddle-animation-vertex-animation-texture"
version = "0.1.0"
edition = "2024"
publish = false
description = "GPU vertex animation texture playback for Bevy PBR"
repository = "https://github.com/julien-blanchon/saddle-animation-vertex-animation-texture"
license = "MIT-0"

[dependencies]
bevy = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
