[workspace]
members = [
    "support",
    "basic",
    "crowd",
    "multi_clip",
    "debug_lab",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-animation-vertex-animation-texture = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
